# PFC_VPRTW

./: .gitignore  CMakeLists.txt  main.cpp  utils.h
ALNS/: alns.cpp  alns.h  alns_qlearning.cpp  alns_qlearning.h
ALNS Classic/: main.cpp
Notebooks/: solver_performance_visualizer.ipynb  solver_performance_visualizer_qlearning.ipynb
Operators/: destroy_ops.cpp  operators.cpp  operators.h  repair_ops.cpp
Results/: alns_metrics.csv  alns_qlearning_metrics.csv  tiempos_ejecucion_limpios.csv
Results/CLASSIC/metrics/: CLASSIC_c101_metrics_run1.csv  CLASSIC_c101_metrics_run10.csv  CLASSIC_c101_metrics_run2.csv  CLASSIC_c101_metrics_run3.csv  CLASSIC_c101_metrics_run4.csv  CLASSIC_c101_metrics_run5.csv  CLASSIC_c101_metrics_run6.csv  CLASSIC_c101_metrics_run7.csv  CLASSIC_c101_metrics_run8.csv  CLASSIC_c101_metrics_run9.csv  CLASSIC_c102_metrics_run1.csv  CLASSIC_c102_metrics_run10.csv  CLASSIC_c102_metrics_run2.csv  CLASSIC_c102_metrics_run3.csv  CLASSIC_c102_metrics_run4.csv  CLASSIC_c102_metrics_run5.csv  CLASSIC_c102_metrics_run6.csv  CLASSIC_c102_metrics_run7.csv  CLASSIC_c102_metrics_run8.csv  CLASSIC_c102_metrics_run9.csv  CLASSIC_c103_metrics_run1.csv  CLASSIC_c103_metrics_run10.csv  CLASSIC_c103_metrics_run2.csv  CLASSIC_c103_metrics_run3.csv  (+536 more)
Results/resultados_de_terminal/: R1 02 ALNS+Qlearning.txt  R1 02 ALNS.txt  R2 01 ALNS+Qlearning.txt  R2 01 ALNS.txt  RC1 01 ALNS+Qlearning.txt  RC1 01 ALNS.txt  RC2 01  ALNS+Qlearning.txt  RC2 01  ALNS.txt
VRPTW Environment/: instance.cpp  instance.h  solution.cpp  solution.h  vrptw.cpp  vrptw.h
(+1550 files in other folders)
